--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@mixin displayFlex($ai: center, $jc: center, $gp: unset) {
+  display: flex;
+  align-items: $ai;
+  justify-content: $jc;
+  gap: $gp;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  overflow: hidden;
+}
