--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -10,10 +10,15 @@
       (click)="pickCard()"
       src="./../../assets/img/card_cover.png" />
     <img
+      class="played-card"
+      *ngFor="let card of game.playedCard"
+      src="./../../assets/img/{{ card }}"
+      alt="" />
+    <img
       *ngIf="pickCardAnimation"
       style="right: 25px"
       class="pick-card"
       (click)="pickCard()"
-      src="./../../assets/img/ace_1.png" />
+      src="./../../assets/img/{{ currentCard }}" />
   </div>
 </div>
