--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,3 +1,11 @@
+<app-player
+  *ngFor="let player of game.players; let i = index"
+  [name]="player"
+  [activePlayer]="i == game.currentPlayer"
+  [ngStyle]="{ 'top.px': 100 + i * 70 }"
+  class="player-position">
+</app-player>
+
 <div class="field">
   <div class="card-stack">
     <img
@@ -22,3 +30,7 @@
       src="./../../assets/img/{{ currentCard }}" />
   </div>
 </div>
+<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+<button mat-fab color="primary" (click)="openDialog()" class="btn-add">
+  <mat-icon>add</mat-icon>
+</button>
