--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,11 @@
   box-sizing: border-box;
 }
 
-html {
-  overflow: hidden;
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
