--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,5 +1,5 @@
 <div class="player" [class.player-active]="activePlayer">
-  <img src="./../../assets/img/profiles/player1.png" alt="player1-profile" />
+  <img src="assets/img/profiles/player1.png" alt="player1-profile" />
 
   <span>{{ name }}</span>
 </div>
